# vulnerabilties_study

./: READme.md
CSRF_best_practices/: Readme.md  csrf_best_practices.py  csrf_flask_wtf.py
Open_redirects/: READme.md
Open_redirects/open_redirects_best_practices/: Cargo.toml
Open_redirects/open_redirects_best_practices/src/: main.rs
SQLi_best_practices/: READme.md  sqli_best_practices.rs
SQLi_best_practices/sqli_best_practices/: .env  .gitignore  Cargo.toml  diesel.toml
SQLi_best_practices/sqli_best_practices/.sqlx/: query-11dbb88c88dbe0b9e59fb091c692eaeedbd67c9faf9703f4ce21dfb966fa6bec.json
SQLi_best_practices/sqli_best_practices/migrations/2025-05-19-205523_create_users/: up.sql
SQLi_best_practices/sqli_best_practices/src/: main.rs  schema.rs
Sensitive_data_exposure/: READme.md
Sensitive_data_exposure/sens_data_exp_best_practices/: Cargo.toml
Sensitive_data_exposure/sens_data_exp_best_practices/src/: main.rs
XSS_best_practices/: READme.md  comments.db  requirements.txt  xss_best_practices.py
oauth_misconfigurations/: READme.md  oauth_misconfigurations.py  requirements.txt
